@@ -1,11 +1,0 @@
-FROM maven:3.5-jdk-8-alpine
-
-#ADD . /usr/src/river.rdf
-ADD . /
-#RUN cd /usr/src/river.rdf && mvn clean install
-#RUN cd /usr/src/river.rdf
-#RUN cd /usr/src/river.rdf
-#RUN ["mvn","clean","install"]
-CMD cd /usr/src/river.rdf
-CMD mvn exec:java -Dexec.mainClass="org.elasticsearch.app.Indexer"
-#ENTRYPOINT ["", "Hello world"]
